# de-zoomcamp-2025

./: .gitignore  README.md  pyproject.toml  requirements.txt
01-docker-terraform/docker-sql/: .gitignore  Dockerfile  README.md  data-loading-parquet.py  docker-compose.yaml  homework-1.sql  ingest-data.py  upload-data.ipynb
01-docker-terraform/terraform-clickhouse-yc/: .gitignore  Dockerfile  requirements.txt  terraformrc  variables.tf
02-workflow-orchestration/: FAQ_homework.md  docker-compose.yaml  homework3.dm  homework3.md  readme.md
02-workflow-orchestration/flows/: 01_minio_create_bucket.yaml  03_minio_taxi.yaml  04_minio_taxi_scheduled.yaml  05_clickhouse_dbt.yaml  06_minio_taxi_parquet.yaml  minio_kv.yaml  minio_taxi.yaml
05-batch-spark/: hmework5.md  raedme.md
06-streaming/: .gitignore  README.md
06-streaming/pyflink/: .gitignore  homework6.ipynb
dbt_clickhouse_taxi_rides/: .user.yml  README.md  dbt_project.yml  dlt-s3-pipeline.py  dlt.yml  dlt_pipeline_csv_to_parqet.ipynb  homework4.md  package-lock.yml  packages.yml  profiles.yml  test_pipeline.py  test_pipeline_dlt_csv_s3.ipynb
dbt_clickhouse_taxi_rides/.dlt/: config.toml
dbt_clickhouse_taxi_rides/macros/: get_payment_type_description.sql
dbt_clickhouse_taxi_rides/models/: source.yml
dbt_clickhouse_taxi_rides/queries/: create_raw_staging.sql  create_staging.sql  queri_manually_test_stg_models.sql
dbt_clickhouse_taxi_rides/seeds/: seeds_properties.yaml
dbt_clickhouse_taxi_rides/taxi_rides_ny/: dbt_project.yml
workshop-dlt/: dlt-workshop.ipynb  homework-workshop.ipynb
(+40 files in other folders)
