[project]
name = "de-zoomcamp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pip>=25.0",    
    "dbt-clickhouse>=1.8.8",
    "dbt-core>=1.8.9",
    "ruff>=0.9.5",
    "pyarrow>=17.0.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.18",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
    "sqlfluff>=3.3.1",
]
